<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="14dp" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Password"
        android:inputType="numberPassword"
        android:padding="14dp" />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login" />
    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/go_register"
        android:layout_below="@+id/btn_login"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_here_to_register"
        android:layout_height="wrap_content"/>



    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>