<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddQuestionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_lay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_color"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:id="@+id/tvQuesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="1"/>

            <TextView
                android:id="@+id/etTitlee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/add_question"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_lay"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Question"
        android:padding="14dp" />

    <RadioGroup
        android:layout_marginTop="30dp"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edQuestion"
        android:layout_marginHorizontal="20dp">

        <RadioButton
            android:id="@+id/first_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 1" />

        <EditText
            android:id="@+id/et_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_etext"
            android:hint="@string/enter_your_option"
            android:padding="14dp" />

        <RadioButton
            android:id="@+id/sec_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 2" />

        <EditText
            android:id="@+id/et_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_etext"
            android:hint="@string/enter_your_option"
            android:padding="14dp" />

        <RadioButton
            android:id="@+id/third_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 3" />

        <EditText
            android:id="@+id/et_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_etext"
            android:hint="@string/enter_your_option"
            android:padding="14dp" />

        <RadioButton
            android:id="@+id/forth_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 4" />

        <EditText
            android:id="@+id/et_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_etext"
            android:hint="@string/enter_your_option"
            android:padding="14dp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/finish"
            android:backgroundTint="@color/primary_color"
            />

        <Button
            android:id="@+id/nxt_question"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/next_question"
            android:backgroundTint="@color/primary_color"
            />
    </LinearLayout>


</RelativeLayout>