<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <ImageView
        android:layout_width="35sp"
        android:layout_height="35dp"
        android:src="@drawable/backbtn"
        android:id="@+id/backbtnn"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Name"

        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Mobile Number"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mobile"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_etext"
        android:hint="Password"
        android:inputType="numberPassword"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/cb_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/rb_student"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/student"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/rb_professor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/professor"

                android:textSize="20dp" />
        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_layout"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register" />

</RelativeLayout>