<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginHorizontal="20dp"
    app:strokeColor="@color/primary_light"
    app:strokeWidth="1dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginVertical="5dp"
            android:text="@string/description" />

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="15/12/1998" />


            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="11:30" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="15/12/1998" />


            <TextView

                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="11:30" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_of_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_20_question" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:visibility="gone"
                android:backgroundTint="#D32F2F"/>
            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnDelete"
                android:text="Edit"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:backgroundTint="#D32F2F"/>
            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:backgroundTint="#D32F2F"/>
            <Button
                android:id="@+id/btnScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scores"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:backgroundTint="@color/primary_color"/>

        </RelativeLayout>



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>